--- a/style/style.css
+++ b/style/style.css
@@ -3,13 +3,20 @@
     padding: 0;
 }
 
-body {
-    background-image: linear-gradient(rgba(174, 177, 182, 0.75),
-    rgba(135, 135, 141, 0.75)), url(../imags/Logo.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 25%;
-    font-family: sans-serif;
+html, body{
+    height: 100%;
 }
+
+#main-container{
+    height: 100%;
+    background-image: linear-gradient(to right, rgba(157, 167, 194, 0.7),
+    rgba(95, 95, 179, 0.1)), url(../imags/Logo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;    
+}
+
 
 header{
     position: fixed;
@@ -19,12 +26,12 @@ header{
     display: flex;
     justify-content: space-around;
     transition: 0.7s;
-    padding: 30px 20px;
+    padding: 10px 20px;
     z-index: 10;
 }
 
 header.down{
-    background: rgb(233, 172, 233);
+    background: #13a2b8;
     padding: 15px 20px;
 }
 
@@ -32,16 +39,30 @@ header .logo{
     position: relative;
     color: #fff;
     font-weight: bold;
-    font-size: 2em;
-    letter-spacing: 2px;
+    font-size: 1.8em;
     transition: 1.5s;
     text-decoration: none;
+    margin-left: -35px;
 }
 
 nav{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.nav-toggle {
+    color: white;
+    background: none;
+    border: none;
+    font-size: 30px;
+    padding: 0 20px;
+    line-height: 60px;
+    cursor: pointer;
+    display: none;
+}
+
+.nav-toggle2 {
+    color: rgb(22, 21, 21);
 }
 
 header ul{
@@ -51,8 +72,17 @@ header ul{
     align-items: center;
 }
 
-header ul li{
+header ul li{ 
     list-style: none;
+}
+
+.home{ 
+    list-style: none;
+}
+
+a.fa{
+    color: #fff;
+    margin: 0 15px;
 }
 
 header ul li a{
@@ -64,88 +94,201 @@ header ul li a{
     letter-spacing: 2px;
     font-weight: 600;
     transition: 0.7s;
+    display: block;
+    padding: 10px;
 }
 
 header.down .logo, header.down ul li a{
-    color: #000;
+    color: #e3f1f1;
+}
+
+.logo{
+    text-transform: uppercase;
+    letter-spacing: 10px;
+}
+
+a.fa-home{
+    font-size: 45px !important;
+    text-decoration: none;
+}
+
+.sities{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 20px;
+}
+
+footer {
+  background-color: black;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: white;
+}
+
+footer {
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    color: white;
+}
+
+
+/*Site1*/
+
+.contenido2{
+    background-color: aquamarine;
+}
+
+.logo.logo1{
+    position: relative;
+    color: rgb(20, 12, 12);
+    font-weight: bold;
+    font-size: 1.8em;
+    transition: 1.5s;
+    text-decoration: none;
+    margin-left: -35px;
+}
+
+a.color.fa{
+    color: rgb(8, 8, 8);
+}
+
+header.color ul.color li.color a.color{
+    position: relative;
+    font-family: helvetica;
+    margin: 0 15px;
+    text-decoration: none;
+    color: rgb(7, 7, 7);
+    letter-spacing: 2px;
+    font-weight: 600;
+    transition: 0.7s;
+    display: block;
+    padding: 10px;
+}
+
+header.down.color .logo.logo1, header.down.color ul.color li.color a.color{
+    color: #d3e6e6;
+}
+
+nav ul li a:hover{
+    background-color: #203239;
+    border-radius: 10px;
+}
+
+ul.color li.color a:hover, .btn-color{
+    background-color: #3307f7;
+    border-radius: 10px;
+}
+
+
+
+
+td.site1{
+    padding: 50px 0 0 80px;
+}
+
+.img-pastel{
+    width: 400px;
+    height: 200px
 }
 
 section.ftco-section{
     text-align: center;
-    top: 500px; left: 0px;
+    top: 100px;  left: 20px;
     position: relative;
     padding: 10px;
     margin: 40px;
     margin-top: 20px;
+    color: rgb(27, 25, 25);
+    font-size: x-large;
+    font-weight: bold;    
 }
 
-
-.Precio{
+table{
     position: relative;
-    text-align: left;
-    top: 20px; left: 450px;
+    left: 100px;
 }
 
-.Descripcion{
+/*Site2*/
+.contenido3{
+    background-color: aquamarine;
+}
+td.site2{
+    padding: 50px 0 0 80px;
+}
+
+th{
     position: relative;
-    text-align: left;
-    top: 20px; left: 350px;
+    left: 55px;
+}
+#decoracion{
+    width: 400px;
+    height: 300px
 }
 
-.Combinacion{
+#Id2{
     position: relative;
-    text-align: left;
-    top: 20px; left: 250px;
+    left: -100px;
 }
 
+/*Site3*/
+
+h2{
+    position: relative;
+    left: 350px;
+    width: 150px;
+}
 .Formulario{
     position: relative;
     text-align: left;
-    top: 10px; left: 100px;
-}
-
-h2{
-    text-align: center;
-    padding-bottom: 15px;
-}
-
-th.Select{
-    padding-left: 250px;
-}
-
-th.Select1{
-    padding-left: 200px;
+    top: 10px; left: 50px;
 }
 
 td.Datos{
-    padding-left: 460px;
-    border-top-width: 15px;
+    padding: 50px 0 0 0;
 }
 
 .elem-group{
     position: relative;
-    top: 10px; left: 180px;
+    top: 15x; left: 0px;
 }
 
 div.elem-group{
     padding-bottom: 10px;
 }
+
 input{
     position: relative;
     left: 10px;
 }
 
 .texto{
-    margin-top: 15px;
+    margin-top: 5px;
     padding-top: 15px;
-    margin-left: 180px;
-    width: 580px;
-    height: 79px;
+    width: 680px;
+    height: 209px;
+}
+
+input, select{
+    background-color: #7a7c81;
+    color: #fff;
+    border-radius: 50px;
+}
+::placeholder, option, select{
+    color: #fff;
+    font-weight: bold;
 }
 
 .Envio{
     margin-top: 20px;
-    margin-left: 180px;
+    background-color: #203239;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #fff;
+    width: 200px;
 }
 
 .btn-outline-success{
@@ -156,18 +299,3 @@ input{
     padding-left: 20px;
 }
 
-td.Adornos
-{
-    padding-top: 10px;
-    padding-left: 180px;
-}
-
-.cities{
-    background-color: rgb(0, 0, 0);
-    color: white;
-    padding: 20px;
-}
-
-.contacto{
-    margin-top: 600px;
-}
